Select bone (with constraint) in Pose Mode from Outliner (and constraint tab in Properties Editor showing) crashes #84367

Closed
opened 2021-01-04 10:16:16 +01:00 by Bodhi · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon(TM) Vega 3 Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.28 27.20.1028.1

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Broken: version: 2.90.0
Broken: version: 2.83.10

Caused by eaa44afe70

Short description of error
Trying to select the bone in pose mode causes hard crash (EXCEPTION_ACCESS_VIOLATION).

Exact steps for others to reproduce the error
Proog Bug.blend

Try to select the green bone in the Outliner or the View3D. "R_jackethang" or "L_jackethang" from proogjakskel armature.
(when the constraints tab is showing in the Properties Editor)

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon(TM) Vega 3 Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.28 27.20.1028.1 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Broken: version: 2.90.0 Broken: version: 2.83.10 Caused by eaa44afe70 **Short description of error** Trying to select the bone in pose mode causes hard crash (EXCEPTION_ACCESS_VIOLATION). **Exact steps for others to reproduce the error** [Proog Bug.blend](https://archive.blender.org/developer/F9550245/Proog_Bug.blend) Try to select the green bone in the Outliner or the View3D. "R_jackethang" or "L_jackethang" from proogjakskel armature. (when the constraints tab is showing in the Properties Editor)
Author

Added subscriber: @Bodi

Added subscriber: @Bodi

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't redo this error in 2.91 release or master (b8e536f3819155f1ed5dfae45bad261b6c328e20).

  • Does it matter how you select the bone? (right click, select, click on the icon?)
  • Does this happen when accessing the bone from an outliner search? - e.g. searching for R_jackethang
  • Does this work in older versions of Blender?
I can't redo this error in 2.91 release or master (`b8e536f3819155f1ed5dfae45bad261b6c328e20`). - Does it matter how you select the bone? (right click, select, click on the icon?) - Does this happen when accessing the bone from an outliner search? - e.g. searching for `R_jackethang` - Does this work in older versions of Blender?

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce a crash in 2.92.0 Alpha, branch: master, commit date: 2020-12-31 13:25, hash: 8c135fa9a8 when clicking on the constraint icon behind the name of the bone. However, I can't get it to crash in 2.91. Will test with a never version shortly, in case this issue in 2.92.0 has already been fixed.

Edit: Still crashes in current master (d11a87b88c), but this appears to be a different issue than the one reported.

libc.so.6!__strlen_avx2() (/build/glibc-ZN95T4/glibc-2.31/sysdeps/x86_64/multiarch/strlen-avx2.S:96)
libasan.so.5!strcat (Unknown Source:0)
bone_constraint_panel_id(void * md_link, char * r_name) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_templates.c:2313)
uiTemplateConstraints(uiLayout * UNUSED_layout, bContext * C, _Bool use_bone_constraints) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_templates.c:2351)
UILayout_template_constraints_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) (/home/dev/01-data/01-git/blender-git/build_linux_debug_full/source/blender/makesrna/intern/rna_ui_gen.c:2740)
RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_access.c:7548)
pyrna_func_call(BPy_FunctionRNA * self, PyObject * args, PyObject * kw) (/home/dev/01-data/01-git/blender-git/blender/source/blender/python/intern/bpy_rna.c:6315)
_PyObject_FastCallKeywords(PyObject * callable, PyObject * const * stack, Py_ssize_t nargs, PyObject * kwnames) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Objects/call.c:199)
call_function(PyObject *** pp_stack, Py_ssize_t oparg, PyObject * kwnames) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Python/ceval.c:4619)
_PyEval_EvalFrameDefault(PyFrameObject * f, int throwflag) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Python/ceval.c:3139)
function_code_fastcall(PyCodeObject * co, PyObject * const * args, Py_ssize_t nargs, PyObject * globals) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Objects/call.c:283)
_PyFunction_FastCallDict(PyObject * func, PyObject * const * args, Py_ssize_t nargs, PyObject * kwargs) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Objects/call.c:322)
bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/dev/01-data/01-git/blender-git/blender/source/blender/python/intern/bpy_rna.c:8522)
panel_draw(const bContext * C, Panel * panel) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_ui.c:143)
ed_panel_draw(const bContext * C, ARegion * region, ListBase * lb, PanelType * pt, Panel * panel, int w, int em, char * unique_panel_str, const char * search_filter) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:2719)
ED_region_panels_layout_ex(const bContext * C, ARegion * region, ListBase * paneltypes, const char ** contexts, const char * category_override) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:2913)
buttons_main_region_layout_properties(const bContext * C, SpaceProperties * sbuts, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_buttons/space_buttons.c:313)
buttons_main_region_layout(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_buttons/space_buttons.c:507)
ED_region_do_layout(bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:510)
wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:684)
I can reproduce a crash in 2.92.0 Alpha, branch: master, commit date: 2020-12-31 13:25, hash: `8c135fa9a8` when clicking on the constraint icon behind the name of the bone. However, I can't get it to crash in 2.91. Will test with a never version shortly, in case this issue in 2.92.0 has already been fixed. Edit: Still crashes in current master (`d11a87b88c`), but this appears to be a different issue than the one reported. ```lines libc.so.6!__strlen_avx2() (/build/glibc-ZN95T4/glibc-2.31/sysdeps/x86_64/multiarch/strlen-avx2.S:96) libasan.so.5!strcat (Unknown Source:0) bone_constraint_panel_id(void * md_link, char * r_name) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_templates.c:2313) uiTemplateConstraints(uiLayout * UNUSED_layout, bContext * C, _Bool use_bone_constraints) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_templates.c:2351) UILayout_template_constraints_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) (/home/dev/01-data/01-git/blender-git/build_linux_debug_full/source/blender/makesrna/intern/rna_ui_gen.c:2740) RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_access.c:7548) pyrna_func_call(BPy_FunctionRNA * self, PyObject * args, PyObject * kw) (/home/dev/01-data/01-git/blender-git/blender/source/blender/python/intern/bpy_rna.c:6315) _PyObject_FastCallKeywords(PyObject * callable, PyObject * const * stack, Py_ssize_t nargs, PyObject * kwnames) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Objects/call.c:199) call_function(PyObject *** pp_stack, Py_ssize_t oparg, PyObject * kwnames) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Python/ceval.c:4619) _PyEval_EvalFrameDefault(PyFrameObject * f, int throwflag) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Python/ceval.c:3139) function_code_fastcall(PyCodeObject * co, PyObject * const * args, Py_ssize_t nargs, PyObject * globals) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Objects/call.c:283) _PyFunction_FastCallDict(PyObject * func, PyObject * const * args, Py_ssize_t nargs, PyObject * kwargs) (/home/blender/Developer/build_linux/deps/build/python/src/external_python/Objects/call.c:322) bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/dev/01-data/01-git/blender-git/blender/source/blender/python/intern/bpy_rna.c:8522) panel_draw(const bContext * C, Panel * panel) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_ui.c:143) ed_panel_draw(const bContext * C, ARegion * region, ListBase * lb, PanelType * pt, Panel * panel, int w, int em, char * unique_panel_str, const char * search_filter) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:2719) ED_region_panels_layout_ex(const bContext * C, ARegion * region, ListBase * paneltypes, const char ** contexts, const char * category_override) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:2913) buttons_main_region_layout_properties(const bContext * C, SpaceProperties * sbuts, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_buttons/space_buttons.c:313) buttons_main_region_layout(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_buttons/space_buttons.c:507) ED_region_do_layout(bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:510) wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:684) ```
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Can get it to crash in 2.90, 2.91 and master, caused by eaa44afe70

CC @HooglyBoogly

Can get it to crash in 2.90, 2.91 and master, caused by eaa44afe70 CC @HooglyBoogly
Philipp Oeser changed title from SELECT bone in Pose Mode Crash to SELECT bone (with constraint) in Pose Mode from Outliner Crash 2021-01-04 13:20:46 +01:00
Philipp Oeser changed title from SELECT bone (with constraint) in Pose Mode from Outliner Crash to Select bone (with constraint) in Pose Mode from Outliner (and constraint tab in Properties Editor showing) crashes 2021-01-04 13:21:43 +01:00
Philipp Oeser self-assigned this 2021-01-04 13:35:43 +01:00

This issue was referenced by 36ae6e66c1

This issue was referenced by 36ae6e66c1068b5579c725c3353d39afe96c9d29
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84367
No description provided.